[package]
name = "twitch_archiver"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = true

[dependencies]
once_cell = "^1.17"
regex = "^1.8"
reqwest = { version = "^0.11", features = ["blocking", "json"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
