[package]
name = "twitch_archiver"
version = "0.3.2"
edition = "2021"
description = "A small library for downloading Twitch VODs."
repository = "https://github.com/F0903/twitch_archiver"
license-file = "LICENSE"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = true

[dependencies]
once_cell = "^1.17"
regex = "^1.10"
reqwest = { version = "^0.11", features = ["blocking", "json"] }
serde_json = "^1.0"
